<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateBusinessAcitivity">

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/bs_number"
        android:hint = "enter 9-digit number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/bs_name"
        android:hint = "Business Name"
        app:layout_constraintTop_toBottomOf="@+id/bs_number"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Primary Business: "
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <EditText
            android:id="@+id/bs_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint = "enter one of the following"
            app:layout_constraintTop_toBottomOf="@+id/bs_number"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fisher, Distributor, Processor, Fish Monger"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />


    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/bs_address"
        android:hint = "Address"
        app:layout_constraintTop_toBottomOf="@+id/bs_number"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Province/territory: "
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <EditText
            android:id="@+id/bs_province"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint = "e.g. BC"
            app:layout_constraintTop_toBottomOf="@+id/bs_number"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />




    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Create Business"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:onClick="submitInfoButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</LinearLayout>
